--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -5,8 +5,28 @@
 %\begin{abstractslong}    %uncommenting this line, gives a different abstract heading
 \begin{abstracts}        %this creates the heading for the abstract page
 
-This is where you write your abstract ...
 
+  Modern astrophysics and natural sciences in general become
+  extensively penetrated by Computer Science. Petabyte scale
+  databases, GRID Computing and Data Mining become routine part of
+  scientific work. Skills related to information technologies are now
+  essential. The new concept of data infrastructure named Virtual
+  Observatory naturally emerged from digitalized surveys. Based on
+  proven standards offers ideal basis for dealing with distributed
+  heterogeneous data. This thesis is a case study of using Virtual
+  Observatory and Data Mining technologies to proceed automatics
+  classification of Be stars. Photometric and spectra classification
+  were done on large scale sample of almost 200 000 spectra from SDSS
+  Segue survey.
+
+  Many byproduct originated during the work on the thesis. Wiki pages,
+  Virtual Observatory and Data Mining documentation and about dozen of
+  programs for data manipulation, spectra fitting and result
+  publishing. Everything is given free to the public on the web of the
+  project.
+
+
+  \url{http://physics.muni.cz/~vazny/wiki/index.php/Diploma_work}
 
 \end{abstracts}
 %\end{abstractlongs}
