--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -168,6 +168,25 @@
   year={1988}
 }
 
+@article{bukvic2008advanced,
+  title={{Advanced fit technique for astrophysical spectra}},
+  author={Bukvi{\'c}, S. and Spasojevi{\'c}, D. and {\v{Z}}igman, V.},
+  journal={Astronomy and Astrophysics},
+  volume={477},
+  number={3},
+  pages={967--977},
+  issn={0004-6361},
+  year={2008},
+  publisher={EDP Sciences}
+}
+
+
+@book{launer1979robustness,
+  title={{Robustness in statistics: proceedings of a workshop}},
+  author={Launer, R.L.},
+  year={1979},
+  publisher={Academic Pr}
+}
 
 
 % ------------------------------------------------------------------------
