--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -18,14 +18,15 @@
                   /OpenAction (fitbh)  }
 \fi
 
-\title{Virtual Observatory}
+\title{Study of astronomical objects using technology of Virtual
+  Observatory}
 
 \ifpdf
   \author{\href{mailto:jaroslav.vazny@gmail.com}{Jaroslav Vazny}}
   \collegeordept{\href{http://www.physics.muni.cz}{Department of Theoretical Physics and Astrophysics }}
-  \university{\href{http://www.muni.cz}{Masarykova Univerzita}}
+  \university{\href{http://www.muni.cz}{Masaryk University}}
 % insert below the file name that contains the crest in-place of 'UnivShield'
-  \crest{\includegraphics[width=60mm]{ivoa_logo}}
+  \crest{\includegraphics[width=40mm]{sci-logo}}
 \else
   \author{Jaroslav Vazny}
   \collegeordept{Department of Theoretical Physics and Astrophysics}
@@ -102,6 +103,7 @@
 \frontmatter % book mode only
 \pagenumbering{roman}
 \include{dedication}
+\include{cite}
 \include{acknowledgement}
 \include{abstract}
 
@@ -120,7 +122,7 @@
 \include{chapter1}
 \include{chapter2}
 \include{chapter3}
-%\include{Conclusions/conclusions}
+\include{conclusion} 
 
 \backmatter % book mode only
 \appendix
