--- a/thesis/acknowledgement.tex
+++ b/thesis/acknowledgement.tex
@@ -2,10 +2,50 @@
 
 
 %\begin{acknowledgementslong} %uncommenting this line, gives a different acknowledgements heading
-\begin{acknowledgements}      %this creates the heading for the acknowlegments
+\begin{acknowledgements}      %this creates the heading for the acknowledgments
 
 
-And I would like to acknowledge ...
+  I would like to thank Filip Hroch and Petr Škoda for their
+  remarkable support and patience not only during this project. I
+  greatly appreciated comments and help from following friends: Tereza
+  Jeřábková, Josef Pacula, Petr Šafařík, a vsem tem ubozakum co je to
+  donutim precist;-) 
+
+
+  \bigskip 
+  Funding for the SDSS and SDSS-II has been provided by the
+  Alfred P. Sloan Foundation, the Participating Institutions, the
+  National Science Foundation, the U.S. Department of Energy, the
+  National Aeronautics and Space Administration, the Japanese
+  Monbukagakusho, the Max Planck Society, and the Higher Education
+  Funding Council for England. The SDSS Web Site is
+  \url{http://www.sdss.org/}.
+
+  The SDSS is managed by the Astrophysical Research Consortium for the
+  Participating Institutions. The Participating Institutions are the
+  American Museum of Natural History, Astrophysical Institute Potsdam,
+  University of Basel, University of Cambridge, Case Western Reserve
+  University, University of Chicago, Drexel University, Fermilab, the
+  Institute for Advanced Study, the Japan Participation Group, Johns
+  Hopkins University, the Joint Institute for Nuclear Astrophysics,
+  the Kavli Institute for Particle Astrophysics and Cosmology, the
+  Korean Scientist Group, the Chinese Academy of Sciences (LAMOST),
+  Los Alamos National Laboratory, the Max-Planck-Institute for
+  Astronomy (MPIA), the Max-Planck-Institute for Astrophysics (MPA),
+  New Mexico State University, Ohio State University, University of
+  Pittsburgh, University of Portsmouth, Princeton University, the
+  United States Naval Observatory, and the University of Washington.
+  \bigskip
+
+   This research has made use of data obtained from the High Energy
+  Astrophysics Science Archive Research Center (HEASARC), provided by
+  NASA's Goddard Space Flight Center.
+
+  \bigskip
+
+  This research has made use of the SIMBAD database, operated at CDS,
+  Strasbourg, France.
+
 
 
 \end{acknowledgements}
