--- a/thesis/chapter3.tex
+++ b/thesis/chapter3.tex
@@ -1,50 +1,84 @@
 \chapter{Be candidates}
+
+\begin{figure}[!htbp]
+  \begin{center}
+    \leavevmode
+    \ifpdf
+    \includegraphics[scale = 1]{mapBeCandidates}
+    \else
+    \includegraphics[bb = 92 86 545 742, height=6in]{mapBeCandidates} 
+    \fi
+    \caption{Chapter structure}
+    \label{FigStructure}
+  \end{center}
+\end{figure}
+
+
 Astronomical objects used in this work to demonstrate some of the
-discussed technologies and methods were Be stars. The target was to
+discussed technologies and methods were Be stars. The goal was to
 develop a process of finding new candidates in the available
 data. Several approaches were considered and two of them are discussed
-in the rest of this text. First one utilizes photometric properties
-of Be stars, second uses spectra characteristics.
+in the rest of this text. First one utilizes photometric properties of
+Be stars, second uses spectra characteristics.
 
 
 \section{Be stars}
 
-"Classical Be stars are B-type stars close to the main sequence that
-exhibit line emission over the photometric spectrum. The excess is
-attributed to a circumstellar gaseous component that is commonly
-accepted to be in the form of an equatorial disk."
+The first example of Be star was reported by Padre Angelo Secchi in
+his letter to the Astronomische Nachrichten in 1866.
 
-\cite{porter2003classical}.
+Classical Be stars are non-supergiant B-type stars whose spectrum has
+or had at some time, one or more Balmer lines in emission. The current
+accepted explanation of this phenomena is circumstellar gaseous
+component in the form of equatorial disk. Rapidly rotating central
+star is important feature of these objects, which may be important
+contributor of the circumstellar medium \cite{porter2003classical}.
+
+The important characteristic used later in the work is the H$\alpha$
+emission. The explanation of its origin is on following pictures.
+
 
     \begin{figure}[!htbp]
       \begin{center}
         \leavevmode
         \ifpdf
-        \subfloat{\includegraphics[width=0.5\textwidth]{beStar2}}                
-        \subfloat{\includegraphics[width=0.5\textwidth]{beStar1}}
+        \includegraphics[scale =.6]{beStarLine}
         \else
-        \includegraphics[bb = 92 86 545 742, height=6in]{beStar}
+        \includegraphics[bb = 92 86 545 742, height=6in]{beStarLine}
         \fi
-        \caption{Model of a typical Be star \cite{hirata1984star}}
+        \caption{Model of a typical Be star. Emission lines coming
+          from an equatorial disk is added to the photo-spheric
+          absorption spectrum. Central B star emits UV (Lyman
+          continuum) and ionizes the disk, which in turn re-emits at
+          high wavelength such as visible
+          domain. \cite{hirata1984star}}
         \label{Figjhk_be_b}
       \end{center}
     \end{figure}
 
+
     \begin{figure}[!htbp]
       \begin{center}
         \leavevmode
         \ifpdf
-        \includegraphics[scale =1]{beSpectra}
+        \includegraphics[scale =.6]{beStarLine2}
         \else
-        \includegraphics[bb = 92 86 545 742, height=6in]{beSpectra}
+        \includegraphics[bb = 92 86 545 742, height=6in]{beStarLine2}
         \fi
         \caption{Example of spectra of Be stars based on view angle
           \cite{slettebak1988stars}}
         \label{Figjhk_be_b}
       \end{center}
     \end{figure}
-
+ 
 \clearpage
+
+There are still many open questions related to their rotation,
+evolutionary status, presence and origin of the magnetic fields, mass
+and angular momentum transfer and others, therefore the process for
+automatic discoveries of Be phenomena in the digitalized surveys and
+obtaining new candidates could help answer these questions.
+
 
 \section{Photometric Data Mining}
 
@@ -54,18 +88,43 @@ accepted to be in the form of an equatorial disk."
 % stars, set of non Be stars (spectral type B was considered) and some
 % Data Mining algorithm to perform classification.
 
+   \begin{figure}[!htbp]
+      \begin{center}
+        \leavevmode
+        \ifpdf
+        \includegraphics[scale =.5]{flowPhoto}
+        \else
+        \includegraphics[bb = 92 86 545 742, height=6in]{flowPhoto}
+        \fi
+        \caption{Schematic diagram of the photometric Data Mining
+          process. The lists of confirmed Be stars consisted of
+          Hipparcos IDs, this was correlated with Hipparcos catalog to
+          obtain right ascension and declination of the objects and
+          subsequently cross-matched with 2MASS catalog to get
+          photometric data. The second set of B stars were acquired in
+          similar manner but using SQL the condition was set to get B
+          type stars different from the list of Be stars.}
+        \label{FigFlowSpectra}
+      \end{center}
+    \end{figure}
+
+ 
+\clearpage
+
+
+
 Classification based on photometric properties is very attractive from
-several points of view. There are much more aviable phometric then
-spectral data and they are easier accesiable. Because they are easier
+several points of view. There are much more available photometric then
+spectral data and they are easier accessible. Because they are easier
 to gain the disproportion between photometric and spectral data will
 probably increase in the future as well. The distinction between Be
 and other types of stars also should be theoretically possible since
-the Be stars exibits infrared excess correlated to the H$\alpha$
+the Be stars exhibits infrared excess correlated to the H$\alpha$
 emission \cite{van1995halpha}.
 
 \subsection{Data preprocessing}
 
-I was provided by a list of confirmed Be stars from Academy of Science
+I was provided with a list of confirmed Be stars from Academy of Science
 Ondřejov. This list consist of 625 manually chosen objects. Data were
 correlated with Hipparcos \cite{perryman1997hipparcos} catalog to
 obtain RA, DEC and then with 2MASS\cite{2006AJ131.1163S} catalog to
@@ -103,12 +162,12 @@ are on the figure \ref{Figjhk_be_b}
     significant certain trends are presented.
 
 \begin{align*}
-  \delta_{(j - h)} = \sqrt{\left(\frac{\partial(j - h) }{\partial
+  \delta_{(j - h)} &= \sqrt{\left(\frac{\partial(j - h) }{\partial
         j}\right)^2\delta_j^2 + \left(\frac{\partial(j - h) }{\partial
         h}\right)^2\delta_h^2} \\
-  \frac{\partial(j - h) }{\partial j } = 1,\frac{\partial(j - h)
+  \frac{\partial(j - h) }{\partial j } &= 1,\frac{\partial(j - h)
   }{\partial h } = -1 \\
-  \delta_{(j - h)} = \sqrt{\delta_j^2 + \delta_h^2}
+  \delta_{(j - h)} &= \sqrt{\delta_j^2 + \delta_h^2}
 \end{align*}
 
 
@@ -164,10 +223,37 @@ candidates of Be stars. For this reason more sophisticated (and much
 more complicated) approach using spectra analysis was tested.
 
 \section{Spectral Data Mining}
+
+   \begin{figure}[!htbp]
+      \begin{center}
+        \leavevmode
+        \ifpdf
+        \includegraphics[scale =.5]{flowSpectra}
+        \else
+        \includegraphics[bb = 92 86 545 742, height=6in]{flowSpectra}
+        \fi
+        \caption{Schematic diagram of the spectral Data Mining
+          process. Using SSA protocol the spectra from Ondřejov server
+          was acquired based on the list from photometric study. SSH
+          Tunneling was necessary since Ondřejov spectra are top
+          secret and therefore not available to the public. Convolution
+          had to be performed to ensure compatibility with
+          SDSS. Afterwards desired features were extracted
+          automatically from the spectra after the continuum and
+          H$\alpha$ line were fitted by appropriate functions. The
+          same was done for spectra from SDSS except the convolution
+          process.}
+        \label{FigFlowSpectra}
+      \end{center}
+    \end{figure}
+
+ 
+\clearpage
+
 Spectra provide much wider scientific informations over photometric
-properties. Spectral lines exibits many distingues features and
+properties. Spectral lines exhibits many distinguish features and
 astronomers have long tradition of analysing their properties. On the
-other side its much complicated ot handle them because of different
+other side its much complicated to handle them because of different
 characteristics (resolution, calibration, wavelength range, etc). This
 is especially true for massive automated processing.  
 
@@ -175,7 +261,7 @@ is especially true for massive automated processing.
 As testing sample the project SEGUE of SDSS were selected. This
 contains 178315 spectra in DR7. Following SQL query was used to
 generate the list of URL links for individual FITS files. These files
-were then download to local sever using wget command.
+were then downloaded to local sever using wget command.
 
 \begin{lstlisting}
 SELECT  objid,dbo.fGetUrlFitsSpectrum(s.specObjID)                                                           
@@ -188,15 +274,15 @@ AND specClass = 1
 \end{lstlisting}
 
 \subsection{Training Data}
-The spectra from Ondřejov Observatory were used as training
+The spectra from Ondřejov Observatory were used as a training
 sample. Files were downloaded using SSA protocol. The SSA server is
-not publically aviable, therefore SSH tunneling was used. Two scripts
+not publicly available, therefore SSH tunneling was used. Two scripts
 for this process were created. First to construct the list of SSA
-compliant adresses, the second to analyse acquired response in VOTable
-format. Then the spectra were downloaded using wget command. The
-fuction for constructing the links based on list of the RA, DEC which
-were obtained from Hipparcos catalog using the specification of IDs
-from Ondřejov's index.
+compliant addresses, the second to analyse acquired response in
+VOTable format. Then the spectra were downloaded using wget
+command. The function for constructing the links based on list of the
+RA, DEC which were obtained from Hipparcos catalog using the
+specification of IDs from Ondřejov's index.
 
 \begin{lstlisting}
 def createQuery(data):
@@ -263,7 +349,7 @@ critical part of the reduction program:
     return xx, yy
 \end{lstlisting}
 
-Prior to binning pixels convolution with gaussian function was
+Prior to binning pixels convolution with Gaussian function was
 performed on the spectra. Convolution is defined:
 
 \begin{equation}
@@ -271,7 +357,7 @@ performed on the spectra. Convolution is defined:
  (f * g )(t) \stackrel{\mathrm{def}}{=}\ \int_{-\infty}^{\infty} f(\tau)\, g(t - \tau)\, d\tau
 \end{equation}
  
-Here it was used in it's dicrete form
+Here it was used in it's discrete form
 
 \begin{equation}
   \label{eq:discreteConvolution}
@@ -280,7 +366,7 @@ Here it was used in it's dicrete form
 
 
 
-The result is on the figure
+The figure shows the result.
 
 
     \begin{figure}[!htbp]
@@ -292,10 +378,10 @@ The result is on the figure
         \includegraphics[bb = 92 86 545 742, height=6in]{convolution}
         \fi
         \caption{Reduction of Ondřejov's spectra of the Be star 4
-          Hercules. The top figure shows gaussian function used for
-          convolution with the structrum, followed by the original
+          Hercules. The top figure shows Gaussian function used for
+          convolution with the spectrum, followed by the original
           spectrum then there is a spectrum after convolution with the
-          gausian function. The last is the final spectrum after
+          Gaussian function. The last is the final spectrum after
           reduction.}
         \label{FigReduction}
       \end{center}
@@ -307,20 +393,20 @@ The result is on the figure
 
 
 \subsection{Spectra Lines Characteristics}
-As parameters for Data Mining process characteristics value of
+As parameters for Data Mining process characteristic values of
 H$\alpha$ line were extracted from the spectra. Many possible
 characteristics from fitting functions through Wavelets Coefficients
-and Eigen Values were discussed with experts. Three parameters were
-finally slected. The hight and the width of the H$\alpha$ emission
-line and median absolute deviation as a characterization of the noise
-level in the spectrum. 
+and Eigenvalues Values were discussed with experts. Three parameters
+were finally selected. The hight and the width of the H$\alpha$
+emission line and median absolute deviation as a characterization of
+the noise level in the spectrum.
 
 
 \subsubsection{Normalization}
 Spectra from SDSS are normalized but the spectra from Ondřejov are
-not. The spectra were devided by it's continuum fit function. This
+not. The spectra were divided by it's continuum fit function. This
 process ensures the compatibility when comparing different
-spectra. Function polyfit from numpy package was used to perfom the
+spectra. Function polyfit from numpy package was used to perform the
 fit. The solution minimizes the squared error:
 
 \begin{align}
@@ -350,7 +436,7 @@ def getMax(x,y,line,range):
 
 \subsubsection{The noise level of the spectrum}
 The noise in the spectrum contributes to the characteristics of the
-spectral lines. As ans estimetor of the noise level the median
+spectral lines. As an estimator of the noise level the median
 absolute deviation was used. It is defined as:
 
 \begin{align}
@@ -359,7 +445,7 @@ absolute deviation was used. It is defined as:
 \end{align}
 
 \subsubsection{The width of the H$\alpha$ line}
-The gaussian function was fitted to the spectral line. First the
+The Gaussian function was fitted to the spectral line. First the
 robust estimators were computed and used as input parameters for
 leastsq\footnote{"leastsqi"s a wrapper around MINPACK’s lmdif and
   lmder algorithms.} method from scipy.opt module, which minimize the
@@ -370,7 +456,9 @@ sum of squares.
   S & = \frac{\operatorname{mad}(x_i - x_0)}{\sum{w_i}}.
 \end{align}
 
-Part of the script implementing fitting the gaussian function
+\cite{launer1979robustness}
+
+Part of the script implementing fitting the Gaussian function
 
 \begin{lstlisting}
 x0 = np.median(sum(w*x))/sum(w)
@@ -404,7 +492,9 @@ Mining process.
           depicts the continuum fit. The bottom figure shows the
           region (width of the green line) used for extraction. The
           position of the line correspond to the maximum value in the
-          region of $50\AA$. The gaussian fit is in red.}
+          region of $50\AA$. The Gaussian fit is in red. Although the
+          fit is almost perfect, this approach fails to get
+          characteristic "double peak" of the emission line. }
         \label{FigSpecChar}
       \end{center}
     \end{figure}
@@ -421,7 +511,7 @@ Mining process.
           figure depicts the continuum fit. The bottom figure shows
           the region (width of the green line) used for
           extraction. The position of the line correspond to the
-          maximum value in the region of $50\AA$. The gaussian fit is
+          maximum value in the region of $50\AA$. The Gaussian fit is
           in red.}
         \label{FigSpecChar}
       \end{center}
@@ -438,8 +528,8 @@ Mining process.
 
 
 \subsection{Data Mining}
-Classification was performed using weka software with algoritm J48
-described in the chapter \ref{chap:dataMining}. Trainning set had 183
+Classification was performed using Weka software with algorithm J48
+described in the chapter \ref{chap:dataMining}. Training set had 173
 and testing set 178314 items. The excerpt from these files follows.
 
 \begin{lstlisting}
@@ -462,10 +552,10 @@ spSpec-53228-1884-001	-0.584628294569	 ?
 spSpec-53228-1884-002	-0.877184482566	 ?
 \end{lstlisting}
 
-The attribute \textrm{grp} is known for the trainnig set but uknown
+The attribute \textrm{grp} is known for the training set but unknown
 for testing set. The classification process fills this information
-based on decision tree created during learning phase. To automte the
-process command line verson of weka software was used.
+based on decision tree created during learning phase. To automate the
+process command line version of Weka software was used.
 
 \begin{lstlisting}
   java -classpath weka.jar
@@ -474,185 +564,61 @@ process command line verson of weka software was used.
   weka.classifiers.trees.J48 -t $1 -T $2 -p 1
 \end{lstlisting}
 
-
+% odsud prepsat
 \subsection{Results}
 
-Because only one parameter (H$\alpha$) was used, the decision tree is
-very simple. If the value of the parametr is greater than $-0.464633$
-the object is considered to be a Be star. If the values in the range
-of $-0.676474$ and $-0.464633$ it is considered to be non Be star (no
-further restriction was assert on the \textrm{other} group). It imply
-that according to classifier the Be star is an object with extreme
-values in H$\alpha$ line. This outcome does not oppose our
-undestanding of these kind of objects.
+% Because only one parameter (H$\alpha$) was used, the decision tree is
+% very simple. If the value of the parameter is greater than $-0.464633$
+% the object is considered to be a Be star. If the values in the range
+% of $-0.676474$ and $-0.464633$ it is considered to be non Be star (no
+% further restriction was assert on the \textrm{other} group). It imply
+% that according to classifier the Be star is an object with extreme
+% values in H$\alpha$ line. This outcome does not oppose our
+% understanding of these kind of objects.
 
+% pouzit jako ukazku jendoduchehho stromu
+The overall fruitfulness of the classification process is almost
+84\%. 10 folds cross-validation was used to compute the error
+rate. 
+
+% The training sample consists only of 173 objects. Also it is
+% clear that used features are not sensitive enough to distinguess huge
+% varieties and small differences between Be stars and other objects. On
+% the other side the performance on the training sample is very
+% promising
+
+\begin{lstlisting}
+  === Summary ===
+Correctly Classified Instances         145               83.815  %
+Incorrectly Classified Instances        28               16.185  %
+Kappa statistic                          0.6529
+Mean absolute error                      0.1849
+Root mean squared error                  0.3652
+Relative absolute error                 39.8819 %
+Root relative squared error             75.8919 %
+Total Number of Instances              173     
+\end{lstlisting}
+
+The classification tree is relatively complicated. But still we can
+learn few things. It is using all of the parameters putted in so they
+are choose correctly (if they were irrelevant classifier would not
+used them). The most important parameter was \textrm{max} which
+determines the hight of the line above the continuum. This was
+expected as H$\alpha$ emission is dominated feature of Be stars. The
+second important parameter was the noise of the spectrum expressed in
+parameter \textrm{mad}. The less important (at least in this example)
+was the width of the line. It need to be emphasized that the parameter
+\textrm{max} does not really measure the hight, \textrm{mad} the noise
+or \textrm{width} the width of the line but there are some simplified
+(and certainly buggy) versions of real parameters. Though it can give
+us some physical insight of the studied phenomenas. Decision trees are
+therefore very powerful compared to black box approaches such are
+Neural Networks where the classification process is beyond human
+understanding.
 
 \begin{lstlisting}
   J48 pruned tree
 ------------------
-alpha <= -0.464633
-|   alpha <= -0.676474: be (45.0/18.0)
-|   alpha > -0.676474: o (46.0/5.0)
-alpha > -0.464633: be (92.0/16.0)
-\end{lstlisting}
-
-\begin{lstlisting}
-  === Summary ===
-Correctly Classified Instances         142               77.5956 %
-Incorrectly Classified Instances        41               22.4044 %
-Kappa statistic                          0.5078
-Mean absolute error                      0.3215
-Root mean squared error                  0.4083
-Relative absolute error                 66.4104 %
-Root relative squared error             83.0045 %
-Total Number of Instances              183     
-\end{lstlisting}
-
-\begin{lstlisting}
-  === Confusion Matrix ===
- Be     O   <-- classified as
- 102    6 |   Be
-  35   40 |   Othres
-\end{lstlisting}
-
-Confusion Matrix indicates that the classifier is much better in
-predicting Be stars (102/6 correct assigments) then in predicting
-results in the \textrm{others} group where there are just 40/35 right
-assigments.
-
-Spectra of some of the objects classified as Be stars are presented
-here. 
-
-
-   \begin{figure}[!htbp]
-      \begin{center}
-        \leavevmode
-        \ifpdf
-        \includegraphics[scale =.8]{result1}
-        \else
-        \includegraphics[bb = 92 86 545 742, height=6in]{result1}
-        \fi
-        \caption{Spectrum of }
-        \label{FigResult1}
-      \end{center}
-    \end{figure}
-
-   \begin{figure}[!htbp]
-      \begin{center}
-        \leavevmode
-        \ifpdf
-        \includegraphics[scale =.8]{result2}
-        \else
-        \includegraphics[bb = 92 86 545 742, height=6in]{result2}
-        \fi
-        \caption{Spectrum of }
-        \label{FigResult2}
-      \end{center}
-    \end{figure}
-
-   \begin{figure}[!htbp]
-      \begin{center}
-        \leavevmode
-        \ifpdf
-        \includegraphics[scale =.8]{result3}
-        \else
-        \includegraphics[bb = 92 86 545 742, height=6in]{result1}
-        \fi
-        \caption{Spectrum of }
-        \label{FigResult3}
-      \end{center}
-    \end{figure}
-
-% Samples of Be Stars           
- 
-    For comparison there are spectra of know Be stars. It is clear
-    that the profile of the H$\alpha$ line is complex and just one
-    parameter cannot possibly express it's characteristic. More
-    advaced description such as Wavelets coeffiction or theoretical
-    models of the line is needed if we want to create realiable
-    process for indentifying Be stars.
-
-   \begin{figure}[!htbp]
-      \begin{center}
-        \leavevmode
-        \ifpdf
-        \includegraphics[scale =.8]{be1_4_her}
-        \else
-        \includegraphics[bb = 92 86 545 742, height=6in]{be1_4_her}
-        \fi
-        \caption{Spectrum of 4 Her. Be star. Spectral Type B9pe.  }
-        \label{FigBe1}
-      \end{center}
-    \end{figure}
-
-   \begin{figure}[!htbp]
-      \begin{center}
-        \leavevmode
-        \ifpdf
-        \includegraphics[scale =.8]{be4_bet_cyg_b}
-        \else
-        \includegraphics[bb = 92 86 545 742, height=6in]{be4_bet_cyg_b}
-        \fi
-        \caption{Spectrum of HR 7418 (Albireo B). A fast-rotating Be
-          star, with an equatorial rotational velocity of at least 250
-          kilometers per second. Its surface temperature has been
-          spectroscopically estimated to be about 13.200 K. Spectral
-          Type B8Ve. }
-        \label{FigBe4}
-      \end{center}
-    \end{figure}
-
-   \begin{figure}[!htbp]
-      \begin{center}
-        \leavevmode
-        \ifpdf
-        \includegraphics[scale =.8]{be3_6_cep}
-        \else
-        \includegraphics[bb = 92 86 545 742, height=6in]{be3_6_cep}
-        \fi
-        \caption{Spectrum of 6 Cepheus. Be star. Spectral Type B3IVe.}
-        \label{FigBe3}
-      \end{center}
-    \end{figure}
-
-
-
-\clearpage
-
-
-\subsection{Conclusion}
-
-The harvesting of large-scale of spectral data is challenging but
-solvable problem. The technology of Virual Observatory offers solid
-background for data discovery and retrieval. The whole process can be
-automated using UN*X like approach of small and single purpose scripts
-or programs. The last stage of choosing the right characteristics and
-Data Mining method is even more complex task requiring deep
-understanding of the researched phenomenas and Machine Learnig theory
-and technology. The possible solution can be based on cooperation
-between experts in scientific and computer science field. Without such
-collaboration we are missing lots of opportunities.
-
-
-
-% mad2
-=== Run information ===
-
-Scheme:       weka.classifiers.trees.J48 -C 0.25 -M 2
-Relation:     STAR-BE-O-weka.filters.unsupervised.attribute.Remove-R1
-Instances:    173
-Attributes:   4
-              max
-              width
-              mad
-              grp
-Test mode:    10-fold cross-validation
-
-=== Classifier model (full training set) ===
-
-J48 pruned tree
-------------------
-
 max <= -0.18843
 |   max <= -0.324763: o (46.0/5.0)
 |   max > -0.324763
@@ -675,35 +641,287 @@ max > -0.18843
 |   mad > 0.030316
 |   |   max <= 6.917615: o (4.0)
 |   |   max > 6.917615: be (3.0)
-
-Number of Leaves  : 	12
-
-Size of the tree : 	23
+\end{lstlisting}
 
 
-Time taken to build model: 0.12 seconds
+\begin{lstlisting}
+  === Confusion Matrix ===
+ Be Others   <-- classified as
+ 95 15   | Be
+ 13 50   | Others
+\end{lstlisting}
 
-=== Stratified cross-validation ===
-=== Summary ===
+The Confusion Matrix evince that the classifier is more successful in
+assigning Be stars (95/15) than in the case of others types stars
+where 13/50 were associated with wrong class.
 
-Correctly Classified Instances         145               83.815  %
-Incorrectly Classified Instances        28               16.185  %
-Kappa statistic                          0.6529
-Mean absolute error                      0.1849
-Root mean squared error                  0.3652
-Relative absolute error                 39.8819 %
-Root relative squared error             75.8919 %
-Total Number of Instances              173     
 
-=== Detailed Accuracy By Class ===
 
-               TP Rate   FP Rate   Precision   Recall  F-Measure   ROC Area  Class
-                 0.864     0.206      0.88      0.864     0.872      0.882    be
-                 0.794     0.136      0.769     0.794     0.781      0.882    o
-Weighted Avg.    0.838     0.181      0.839     0.838     0.839      0.882
+Spectra of some of the objects classified as Be stars are presented
+here. These samples represent tiny fraction of complete result. The
+program for generating web pages with thumbnails were created and full
+result is available on the Wiki pages of this
+project 
 
-=== Confusion Matrix ===
+\url{http://physics.muni.cz/~vazny/wiki/index.php/Diploma_work}.
 
-  a  b   <-- classified as
- 95 15 |  a = be
- 13 50 |  b = o
+\begin{table}[ht]
+%  \centering
+  \small
+     \begin{tabular}[ht]{c l c c c c c c c}
+       \toprule 
+     \# &SDSS name & RA & DEC & u  & g & r & i \\
+   \midrule
+   1&SDSS J035747.16-063850.7& 59.44 & -6.64& 19.83 &19.99& 19.73&19.86 \\ 
+   2&SDSS J094325.89+520128.6& 145.86& 52.02& 16.57 &16.42& 16.55& 16.70\\ 
+   3&SDSS J120729.12+003659.8& 181.87& 0.62 & 17.57 &15.28& 14.30& 13.96\\ 
+   4&SDSS J120908.18+194035.8& 182.3 & 19.7 & 17.87 &16.26& 15.52& 15.19\\ 
+   \bottomrule
+   \end{tabular}
+  \caption{Examples of the result}
+  \label{tab:Result}
+\end{table}
+
+
+\begin{table}[ht]
+%  \centering
+  \small
+     \begin{tabular}[ht]{c l}
+       \toprule
+     \# & link \\
+   \midrule
+   1& \url{http://cas.sdss.org/dr7/en/tools/explore/obj.asp?sid=583165493179842560} \\   
+   2& \url{http://cas.sdss.org/dr7/en/tools/explore/obj.asp?sid=671267254834298880}\\ 
+   3& \url{http://cas.sdss.org/dr7/en/tools/explore/obj.asp?sid=814259934286839808}\\ 
+   4& \url{http://cas.sdss.org/dr7/en/tools/explore/obj.asp?sid=814541407275450368}\\ 
+   \bottomrule
+   \end{tabular}
+  \caption{Links to objects on SDSS Skyserver}
+  \label{tab:Links}
+\end{table}
+
+
+
+
+
+   \begin{figure}[!htbp]
+      \begin{center}
+        \leavevmode
+        \ifpdf
+        \includegraphics[scale =.6]{result1}
+        \else
+        \includegraphics[bb = 92 86 545 742, height=6in]{result1}
+        \fi
+        \caption{Spectrum of }
+        
+        \label{FigResult1}
+      \end{center}
+    \end{figure}
+
+   \begin{figure}[!htbp]
+      \begin{center}
+        \leavevmode
+        \ifpdf
+        \includegraphics[scale =.6]{result2}
+        \else
+        \includegraphics[bb = 92 86 545 742, height=6in]{result2}
+        \fi
+        \caption{Spectrum of }
+        \label{FigResult2}
+      \end{center}
+    \end{figure}
+
+   \begin{figure}[!htbp]
+      \begin{center}
+        \leavevmode
+        \ifpdf
+        \includegraphics[scale =.6]{result3}
+        \else
+        \includegraphics[bb = 92 86 545 742, height=6in]{result1}
+        \fi
+        \caption{Spectrum of }
+        \label{FigResult3}
+      \end{center}
+    \end{figure}
+
+   \begin{figure}[!htbp]
+      \begin{center}
+        \leavevmode
+        \ifpdf
+        \includegraphics[scale =.6]{result3}
+        \else
+        \includegraphics[bb = 92 86 545 742, height=6in]{result1}
+        \fi
+        \caption{Spectrum of }
+        \label{FigResult3}
+      \end{center}
+    \end{figure}
+
+
+% Samples of Be Stars           
+ 
+    For comparison there are spectra of know Be stars. It is clear
+    that the profile of the H$\alpha$ line is complex and just one
+    parameter cannot possibly express it's characteristic. More
+    advanced description such as Wavelets coefficients or theoretical
+    models of the line is needed if we want to create reliable
+    process for identifying Be stars.
+
+   \begin{figure}[!htbp]
+      \begin{center}
+        \leavevmode
+        \ifpdf
+        \includegraphics[scale =.6]{be1_4_her}
+        \else
+        \includegraphics[bb = 92 86 545 742, height=6in]{be1_4_her}
+        \fi
+        \caption{Spectrum of 4 Her. Be star. Spectral Type B9pe.  }
+        \label{FigBe1}
+      \end{center}
+    \end{figure}
+
+   \begin{figure}[!htbp]
+      \begin{center}
+        \leavevmode
+        \ifpdf
+        \includegraphics[scale =.6]{be4_bet_cyg_b}
+        \else
+        \includegraphics[bb = 92 86 545 742, height=6in]{be4_bet_cyg_b}
+        \fi
+        \caption{Spectrum of HR 7418 (Albireo B). A fast-rotating Be
+          star, with an equatorial rotational velocity of at least 250
+          kilometers per second. Its surface temperature has been
+          spectroscopically estimated to be about 13.200 K. Spectral
+          Type B8Ve. }
+        \label{FigBe4}
+      \end{center}
+    \end{figure}
+
+   \begin{figure}[!htbp]
+      \begin{center}
+        \leavevmode
+        \ifpdf
+        \includegraphics[scale =.6]{be3_6_cep}
+        \else
+        \includegraphics[bb = 92 86 545 742, height=6in]{be3_6_cep}
+        \fi
+        \caption{Spectrum of 6 Cepheus. Be star. Spectral Type B3IVe.}
+        \label{FigBe3}
+      \end{center}
+    \end{figure}
+
+
+
+\clearpage
+
+\subsection{Experiment}
+
+One could be interested what would happened if we have choose
+different parameters, used other algorithm, different training set
+etc. These are perfectly valid questions and it is actually the purpose
+and essence of Data Mining and computers in general: perform similar
+task over and over again. With some automation in mind such
+experiments are easy to do. Here is one of the test I have performed.
+
+Natural idea one could have is using just emission line hight and
+write a program to check the spectra for condition \textrm{if emission
+  > threshold}. Then we do not need "expensive" Data Mining algorithms to
+get some interesting results\footnote{This was actually done in the early
+stage of this project.}. Lets try to use Classification using just
+emission line parameter. Here is consequent tree.
+
+
+\begin{lstlisting}
+  J48 pruned tree
+------------------
+alpha <= -0.464633
+|   alpha <= -0.676474: be (45.0/18.0)
+|   alpha > -0.676474: o (46.0/5.0)
+alpha > -0.464633: be (92.0/16.0)
+\end{lstlisting}
+
+We can see that it is not that simple. In the training set there are
+some Be stars with extreme hight in the negative direction (absorption
+line). We have some statistics from classifier. In this example
+the effectiveness were $77.6$\%. Also there is Confusion Matrix 
+
+\begin{lstlisting}
+  === Confusion Matrix ===
+ Be     O   <-- classified as
+ 102    6 |   Be
+  35   40 |   Others
+\end{lstlisting}
+
+which indicates how the classifier will fail to perform in individual
+cases. Here it shows that it is almost exact when the object is Be
+star but it confuses others type of stars with Be stars.
+
+This experiment proves that using Data Mining has a sense even in
+simple cases and can provide non-trivial insight on tested data.
+
+
+% Confusion Matrix indicates that the classifier is much better in
+% predicting Be stars (102/6 correct assignments) then in predicting
+% results in the \textrm{others} group where there are just 40/35 right
+% assignments.
+
+
+
+\subsection{Conclusion}
+
+It is evident that dealing with spectroscopic data is much more
+complicated but also more fruitful. One could extract many
+characteristic features which fit to the actual problem. The FITs
+standard is real godsend and makes work with spectra from different
+sources possible. The results obtained from the Data Miming process
+are reasonable. During the work it was also "discovered" how humans
+are good at visual judgment: when thumbnails of result spectra were
+created it provided much better understanding if something went wrong
+then statistics and numbers. This is one example how machines and
+humans could work together when we utilize ours and theirs natural
+abilities.
+
+There are many aspect which could be done better, some of the
+considered but not implemented subjects are discussed here.
+
+\begin{itemize}
+\item Spectral Characteristics 
+
+  The spectrum was characterized with few, very simple parameters,
+  which can be similar in different types of objects. We have
+  discussed \footnote{Petr Skoda initiated rich and interesting email
+    conversation with leading experts regarding this topic.} many
+  advanced possibilities such are wavelets eigen values etc. This
+  could be subject of further investigation.
+\item Continuum fit
+
+  The simple linear function is too rough to capture true continuum
+  features. There is an interesting and effective algorithm discussed
+  in the paper: Advanced fit technique for astrophysical spectra by
+  S. Bukvi{\'c} et. al. from University of Belgrade
+  \cite{bukvic2008advanced} which seems ideal for this purpose.
+
+\item More Data Mining algorithms
+
+Originally more advanced approaches such are Support Vector Machines
+were considered.
+\item Larger training sample
+
+  To obtain large enough meaningful training sample of confirmed Be
+  stars was a real problem and  many surveys were consider
+  (e.g. IPHAS)  but without success.
+
+\item Usage of Light curves 
+
+  The whole process static but the "Be phenomena" is dynamic in
+  nature. Using light curves could significantly improve the
+  efficiency.
+\item Unknown errors There are things we do not know we don't
+
+  know. The overall process were very complicated and involved
+  hundreds lines of codes. Any overlooked mistake could effect the
+  results. The absence of evidence is not evidence of absence.
+\end{itemize}
+
+
+
