--- a/thesis/dedication.tex
+++ b/thesis/dedication.tex
@@ -2,7 +2,7 @@
 
 \begin{dedication} %this creates the heading for the dedication page
 
-I would like to dedicate this thesis to my loving parents ...
+\flushright{for future generations}
 
 \end{dedication}
 
