--- a/thesis/appendix2.tex
+++ b/thesis/appendix2.tex
@@ -1,23 +1,37 @@
 \graphicspath{{pic/be/}}
 \chapter{Appendix2: Spectra of Ondřejov Be stars}
-\begin{figure}[!htbp]
-  \centering
-  \subfloat{\includegraphics[width=0.33\textwidth]{1}}                
-  \subfloat{\includegraphics[width=0.33\textwidth]{2}}                
-  \subfloat{\includegraphics[width=0.33\textwidth]{3}}                
-\end{figure}
+\centerline{
+\begin{tabular}{cc}
+  \includegraphics[width=0.50\textwidth]{1}
+  &
+  \includegraphics[width=0.50\textwidth]{2}
+  \\
+  \includegraphics[width=0.50\textwidth]{4}
+  &
+  \includegraphics[width=0.50\textwidth]{5}
+  \\
+  \includegraphics[width=0.50\textwidth]{7}
+  &
+  \includegraphics[width=0.50\textwidth]{8}
+  \end{tabular}
+}
 
-\begin{figure}[!htbp]    
-  \centering
-  \subfloat{\includegraphics[width=0.33\textwidth]{4}}                
-  \subfloat{\includegraphics[width=0.33\textwidth]{5}}                
-  \subfloat{\includegraphics[width=0.33\textwidth]{6}}                 
-\end{figure}
-
-\begin{figure}[!htbp]    
-  \centering
-  \subfloat{\includegraphics[width=0.33\textwidth]{7}}                
-  \subfloat{\includegraphics[width=0.33\textwidth]{8}}                
-  \subfloat{\includegraphics[width=0.33\textwidth]{9}}                 
-\end{figure}
- 
+\centerline{
+\begin{tabular}{cc}
+  \includegraphics[width=0.50\textwidth]{1}
+  &
+  \includegraphics[width=0.50\textwidth]{2}
+  \\
+  \includegraphics[width=0.50\textwidth]{4}
+  &
+  \includegraphics[width=0.50\textwidth]{5}
+  \\
+  \includegraphics[width=0.50\textwidth]{7}
+  &
+  \includegraphics[width=0.50\textwidth]{8}
+  \\
+  \includegraphics[width=0.50\textwidth]{7}
+  &
+  \includegraphics[width=0.50\textwidth]{8}
+  \end{tabular}
+}
