--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -1,5 +1,7 @@
 %%% Thesis Introduction --------------------------------------------------
 \chapter*{Introduction}
+\fancyhead{}
+\fancyhead{}
 % \ifpdf
 %     \graphicspath{{Introduction/IntroductionFigs/PNG/}{Introduction/IntroductionFigs/PDF/}{Introduction/IntroductionFigs/}}
 % \else
@@ -17,7 +19,7 @@ existence astronomy has always been starving for data, but in the last
 few decades the situation has changed and now we are facing data
 deluge of biblical proportions. The data are not just increasing in
 size but also in complexity and
-dimensionality. \cite{ballastroinformatics} Astroinformatics is the
+dimensionality \citep{ballastroinformatics}. Astroinformatics is the
 new field of science which has emerged from this technology driven
 progress.  Virtual Observatory, Machine Learning, Data Mining, Grid
 Computing are just few examples of new tools available to scientists.
@@ -132,7 +134,6 @@ were created to present the results and discuss related topic with
 supervisor as well as with others scientist around the world. Source
 codes were maintained by GIT version system allowing easy sharing. All
 software used and produced are open source.
-
 
 
 
