before chnage cite-->citep

--- a/thesis/acknowledgement.tex
+++ b/thesis/acknowledgement.tex
@@ -35,16 +35,17 @@
   New Mexico State University, Ohio State University, University of
   Pittsburgh, University of Portsmouth, Princeton University, the
   United States Naval Observatory, and the University of Washington.
-  \bigskip
-
-   This research has made use of data obtained from the High Energy
-  Astrophysics Science Archive Research Center (HEASARC), provided by
-  NASA's Goddard Space Flight Center.
 
   \bigskip
 
   This research has made use of the SIMBAD database, operated at CDS,
   Strasbourg, France.
+
+  \bigskip
+
+  This research has made use of The WEKA Data Mining Software
+  \citep{hall2009weka}.
+
 
 
 
