--- a/thesis/chapter1.tex
+++ b/thesis/chapter1.tex
@@ -189,7 +189,7 @@ can have any resources.
       \begin{center}
         \leavevmode
         \ifpdf
-        \includegraphics[height=0.9\textwidth, angle=-90]{../resources}
+        \includegraphics[height=0.9\textwidth, angle=-90]{resources}
         \else
         \includegraphics[width=0.9\textwidth]{resource.png}
         \fi
