--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -14,15 +14,15 @@
 \renewcommand{\LettrineFontHook}{\color{red}}
 
 
-\lettrine[lines = 3, loversize=-0.1, lraise=0.1]{F}rom the dawn of its
-existence astronomy has always been starving for data, but in the last
-few decades the situation has changed and now we are facing data
+\lettrine[lines = 3, loversize=-0.1, lraise=0.1]{F}{}rom the dawn of
+its existence astronomy has always been starving for data but in the
+last few decades the situation has changed and now we are facing data
 deluge of biblical proportions. The data are not just increasing in
-size but also in complexity and
-dimensionality \citep{ballastroinformatics}. Astroinformatics is the
-new field of science which has emerged from this technology driven
-progress.  Virtual Observatory, Machine Learning, Data Mining, Grid
-Computing are just few examples of new tools available to scientists.
+size but also in complexity and dimensionality
+\citep{ballastroinformatics}. Astroinformatics is the new field of
+science which has emerged from this technology driven progress.
+Virtual Observatory, Machine Learning, Data Mining, Grid Computing are
+just few examples of new tools available to scientists.
 
 
 \vspace{10pt}
