--- a/thesis/quotation.tex
+++ b/thesis/quotation.tex
@@ -4,6 +4,6 @@ What is it that makes us human? It's not something you can
 program. You can't put it into a chip. It's the strength of the human
 heart. The difference between us and machines.
 
-\flushright{Marcus Wright}
+Marcus Wright
 
 \end{quotation}
