--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -188,5 +188,17 @@
   publisher={Academic Pr}
 }
 
+@article{hall2009weka,
+  title={{The WEKA data mining software: an update}},
+  author={Hall, M. and Frank, E. and Holmes, G. and Pfahringer, B. and Reutemann, P. and Witten, I.H.},
+  journal={ACM SIGKDD Explorations Newsletter},
+  volume={11},
+  number={1},
+  pages={10--18},
+  issn={1931-0145},
+  year={2009},
+  publisher={ACM}
+}
+
 
 % ------------------------------------------------------------------------
