--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -22,15 +22,15 @@
                   /OpenAction (fitbh)  }
 \fi
 
-\title{Study of astronomical objects using technology of Virtual
-  Observatory}
+\title{Virtual Observatory and Data Mining}
 
 \ifpdf
   \author{\href{mailto:jaroslav.vazny@gmail.com}{Jaroslav V\'{a}\v{z}n\'{y}}}
   \collegeordept{\href{http://www.physics.muni.cz}{Department of Theoretical Physics and Astrophysics }}
   \university{\href{http://www.muni.cz}{Masaryk University}}
 % insert below the file name that contains the crest in-place of 'UnivShield'
-  \crest{\includegraphics[width=40mm]{sci-logo}}
+%  \crest{\includegraphics[width=40mm]{sci-logo}}
+  \crest{sci-logo}
 \else
   \author{Jaroslav Vazny}
   \collegeordept{Department of Theoretical Physics and Astrophysics}
@@ -43,8 +43,8 @@
 % \crest{\IncludeGraphicsW{UnivShield}{40mm}{14 14 73 81}}
 %
 %\renewcommand{\submittedtext}{change the default text here if needed}
-\degree{Master}
-\degreedate{Yet to be decided}
+\degree{Master's Thesis}
+\degreedate{Brno 2011}
 
 % turn of those nasty overfull and underfull hboxes
 \hbadness=10000
@@ -105,7 +105,7 @@
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
 
-%\pagestyle{plain}
+\pagestyle{empty}
 
 \frontmatter % book mode only
 \pagenumbering{roman}
